# CDP-Client

./: .gitignore  main.py  notebook.ipynb  pyproject.toml  pytest.ini  run_generator.py
cdp/generator/: client_generator.py  event_generator.py  method_generator.py  service.py  type_generator.py
cdp_client/generator/: constant.py  event_generator.py  method_generator.py  service.py  type_generator.py
client/: events.py  methods.py  service.py
generator/: __init__.py  client_generator.py  event_generator.py  method_generator.py  service.py  type_generator.py
protocol/accessibility/: types.py
protocol/animation/: types.py
protocol/audits/: types.py
protocol/autofill/: types.py
protocol/background_service/: types.py
protocol/bluetooth_emulation/: types.py
protocol/browser/: types.py
protocol/cache_storage/: types.py
protocol/cast/: types.py
protocol/css/: types.py
protocol/debugger/: types.py
protocol/device_access/: types.py
protocol/device_orientation/: types.py
protocol/dom/: types.py
protocol/dom_debugger/: types.py
protocol/dom_snapshot/: types.py
protocol/dom_storage/: types.py
protocol/emulation/: types.py
protocol/event_breakpoints/: types.py
protocol/extensions/: types.py
protocol/fed_cm/: types.py
protocol/fetch/: types.py
protocol/file_system/: types.py
protocol/headless_experimental/: types.py
protocol/heap_profiler/: types.py
protocol/indexed_db/: types.py
protocol/input/: types.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_events.py  test_generator.py  test_methods.py
(+223 files in other folders)
