[project]
name = "cdp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "inflection>=0.5.1",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "jinja2-strcase>=0.0.2",
    "pytest>=9.0.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
